--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 CMakeLists.txt.user
 CMakeCache.txt
-CMakeFiles
+CMakeFiles/
 CMakeScripts
-Testing
+Testing/
 Makefile
 cmake_install.cmake
 install_manifest.txt
@@ -10,6 +10,5 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
-cmake-build-debug
+cmake-build-debug/
 *.exe
-exe
